--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Frontend Client</title>
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 	</head>
 	<body>
@@ -75,6 +75,7 @@
 			try {
 				const response = await fetch("http://localhost:8083/orders", {
 					method: "POST",
+					headers: { "Content-Type": "application/json" },
 					body: JSON.stringify(payload),
 				});
 				if (!response.ok) {
