add timestamp to order model; add client side view for last order

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,6 +88,24 @@
 						<tbody id="users-table-body"></tbody>
 					</table>
 				</div>
+				<div>
+					<p class="font-bold text-lg text-gray-700 pb-3">last order</p>
+					<table
+						id="orders-table"
+						class="border-collapse border border-gray-300 bg-white shadow-sm bg-gray-50 [&_th,td]:border [&_th,td]:border-gray-300 [&_th,td]:px-4 [&_th,td]:py-2 [&_th,td]:text-gray-700"
+					>
+						<thead>
+							<tr>
+								<th>User ID</th>
+								<th>Product ID</th>
+								<th>Quantity</th>
+								<th>status</th>
+								<th>timestamp</th>
+							</tr>
+						</thead>
+						<tbody id="orders-table-body"></tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 		<div>
