--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,53 +9,62 @@
 		<script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 	</head>
 	<body>
-		<div class="flex gap-8 p-4">
-			<form class="w-80" id="orderForm">
-				<div>
-					<label for="username" class="block text-sm font-medium text-gray-700"
-						>Username</label
+		<div class="flex gap-8 p-4 flex-col xl:flex-row">
+			<div>
+				<form class="w-80" id="orderForm">
+					<div>
+						<label
+							for="username"
+							class="block text-sm font-medium text-gray-700"
+							>Username</label
+						>
+						<input
+							type="text"
+							id="username"
+							name="username"
+							class="mt-1 block w-full border-gray-300 rounded-md shadow-sm border border-solid"
+							required
+						/>
+					</div>
+					<div>
+						<label for="product" class="block text-sm font-medium text-gray-700"
+							>Product Name</label
+						>
+						<input
+							type="text"
+							id="product"
+							name="product"
+							class="mt-1 block w-full border-gray-300 rounded-md shadow-sm border border-solid"
+							required
+						/>
+					</div>
+					<div>
+						<label
+							for="quantity"
+							class="block text-sm font-medium text-gray-700"
+							>Quantity</label
+						>
+						<input
+							type="number"
+							id="quantity"
+							name="quantity"
+							class="mt-1 block w-full border-gray-300 rounded-md shadow-sm border border-solid"
+							required
+							min="1"
+						/>
+					</div>
+					<button
+						id="submitBtn"
+						class="bg-gray-300 p-2 rounded-md mt-4 cursor-pointer"
 					>
-					<input
-						type="text"
-						id="username"
-						name="username"
-						class="mt-1 block w-full border-gray-300 rounded-md shadow-sm border border-solid"
-						required
-					/>
-				</div>
+						Submit
+					</button>
+				</form>
 				<div>
-					<label for="product" class="block text-sm font-medium text-gray-700"
-						>Product Name</label
-					>
-					<input
-						type="text"
-						id="product"
-						name="product"
-						class="mt-1 block w-full border-gray-300 rounded-md shadow-sm border border-solid"
-						required
-					/>
+					<p>Order status: <span id="orderStatus">None</span></p>
 				</div>
-				<div>
-					<label for="quantity" class="block text-sm font-medium text-gray-700"
-						>Quantity</label
-					>
-					<input
-						type="number"
-						id="quantity"
-						name="quantity"
-						class="mt-1 block w-full border-gray-300 rounded-md shadow-sm border border-solid"
-						required
-						min="1"
-					/>
-				</div>
-				<button
-					id="submitBtn"
-					class="bg-gray-300 p-2 rounded-md mt-4 cursor-pointer"
-				>
-					Submit
-				</button>
-			</form>
-			<div id="tables-wrapper" style="display: none; gap: 20px">
+			</div>
+			<div id="tables-wrapper" class="display-none gap-5 flex-col xl:flex-row">
 				<div>
 					<p class="font-bold text-lg text-gray-700 pb-3">products table</p>
 					<table
@@ -107,9 +116,6 @@
 					</table>
 				</div>
 			</div>
-		</div>
-		<div>
-			<p>Order status: <span id="orderStatus">None</span></p>
 		</div>
 	</body>
 	<script src="script.js"></script>
