hide table properly

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
 					<p>Order status: <span id="orderStatus">None</span></p>
 				</div>
 			</div>
-			<div id="tables-wrapper" class="display-none gap-5 flex-col xl:flex-row">
+			<div id="tables-wrapper" class="hidden gap-5 flex-col xl:flex-row">
 				<div>
 					<p class="font-bold text-lg text-gray-700 pb-3">products table</p>
 					<table
