--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,11 @@
 					<p>Order status: <span id="orderStatus">None</span></p>
 				</div>
 			</div>
-			<div id="tables-wrapper" class="hidden gap-5 flex-col xl:flex-row">
+			<div
+				id="tables-wrapper"
+				class="gap-5 flex-col xl:flex-row"
+				style="display: none"
+			>
 				<div>
 					<p class="font-bold text-lg text-gray-700 pb-3">products table</p>
 					<table
